base-kustomize/gateway/envoyproxy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flex-gateway
  namespace: envoy-gateway-system
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoyproxy
  infrastructure:
    annotations:
      metallb.universe.tf/address-pool: openstack-external
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.your.domain.tld"
    allowedRoutes:
      namespaces:
        from: All
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.your.domain.tld'
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: flex-endpoints
      mode: Terminate
